Update to all levels_3

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,6 +103,7 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
+LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -134,13 +135,13 @@ CurrentRotGridSize=0
 
 [MRU]
 MRUItem0=/Game/Maps/TrashPlace
-MRUItem1=/Game/Maps/Street
-MRUItem2=/Game/Maps/Hospital
-MRUItem3=/Game/Maps/Alley
-MRUItem4=/Game/Maps/School
-MRUItem5=/Game/Maps/Park
+MRUItem1=/Game/Maps/Park
+MRUItem2=/Game/Maps/Street
+MRUItem3=/Game/Maps/School
+MRUItem4=/Game/Maps/Hospital
+MRUItem5=/Game/Maps/LevelSelection
 MRUItem6=/Game/Maps/Menu
-MRUItem7=/Game/Maps/LevelSelection
+MRUItem7=/Game/Maps/Alley
 MRUItem8=/Game/ThirdPersonBP/Menu
 MRUItem9=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
@@ -213,29 +214,31 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/Maps/TrashPlace
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/WinScreen/BP_WinScreen.BP_WinScreen
+OpenAssetsAtExit=/Game/Blueprints/Raccoon.Raccoon
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/WinScreen/WB_WinScreen
-MRUItem1=/Game/Maps/TrashPlace
-MRUItem2=/Game/Blueprints/Raccoon
-MRUItem3=/Game/Blueprints/WinScreen/BP_WinScreen
-MRUItem4=/Game/Blueprints/Pause/WB_PauseScreen
-MRUItem5=/Game/Blueprints/Collectibles/ItemHolders/BP_HeartToyHolder
-MRUItem6=/Game/Blueprints/Collectibles/ItemHolders/BP_TeddyBearHolder
-MRUItem7=/Game/Blueprints/Collectibles/ItemHolders/BP_CupCakeHolder
-MRUItem8=/Game/Blueprints/Collectibles/ItemHolders/BP_AppleHolder
-MRUItem9=/Game/Blueprints/Collectibles/ItemHolders/BP_SodaHolder
-MRUItem10=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley
-MRUItem11=/Game/Blueprints/BP_GameInstanceRaccoon
-MRUItem12=/Game/Blueprints/BP_GameModeRaccoon
-MRUItem13=/Game/Blueprints/Main_Menu/GM_MouseShow
-MRUItem14=/Game/Blueprints/WinScreen/WP_WinScreen
-MRUItem15=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_TeddyBearSpawn
-MRUItem16=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_SodaSpawn
-MRUItem17=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_HeartToySpawn
-MRUItem18=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_CupCakeSpawn
-MRUItem19=/Game/Blueprints/Collectibles/ItemHolders/ItemsActor/BP_Apple
+MRUItem0=/Game/Blueprints/Raccoon
+MRUItem1=/Game/Blueprints/WinScreen/BP_WinScreen
+MRUItem2=/Game/Maps/TrashPlace
+MRUItem3=/Game/Maps/Park
+MRUItem4=/Game/Maps/Street
+MRUItem5=/Game/Maps/School
+MRUItem6=/Game/Maps/Alley
+MRUItem7=/Game/Maps/Hospital
+MRUItem8=/Game/Maps/LevelSelection
+MRUItem9=/Game/Maps/Menu
+MRUItem10=/Game/Blueprints/Street/TargetPointMove
+MRUItem11=/Game/Blueprints/WinScreen/WB_WinScreen
+MRUItem12=/Game/Blueprints/Pause/WB_PauseScreen
+MRUItem13=/Game/Blueprints/Collectibles/ItemHolders/BP_HeartToyHolder
+MRUItem14=/Game/Blueprints/Collectibles/ItemHolders/BP_TeddyBearHolder
+MRUItem15=/Game/Blueprints/Collectibles/ItemHolders/BP_CupCakeHolder
+MRUItem16=/Game/Blueprints/Collectibles/ItemHolders/BP_AppleHolder
+MRUItem17=/Game/Blueprints/Collectibles/ItemHolders/BP_SodaHolder
+MRUItem18=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley
+MRUItem19=/Game/Blueprints/BP_GameInstanceRaccoon
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1793,7 +1796,7 @@ FrameNumberDisplayFormat=Seconds
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Object=
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -1872,6 +1875,7 @@ WB_PauseScreen_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \
 WB_WinScreen_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Blueprints/Collectibles/ItemHolders/Soda.Soda;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Script/Engine.CameraShakeSourceActor;
@@ -1891,10 +1895,9 @@ RecentlyPlaced=/Game/Blueprints/Collectibles/BP_Soda_2.BP_Soda_2;
 RecentlyPlaced=/Game/Assets/3D/Objects/Apple/Apple.Apple;
 RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley.BP_CheckToAdvance_Alley;
 RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Park.BP_CheckToAdvance_Park;
-RecentlyPlaced=/Game/Assets/3D/Objects/SEWER_HATCH_model_1_.SEWER_HATCH_model_1_;
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=LightingResults
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/BP_Menu.BP_Menu=0
@@ -3188,19 +3191,19 @@ PlayerStart=SkeletalMeshActor.Physics.ConstraintsGroup,
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,
 BP_Sky_Sphere_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 PrimitiveComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
-BrushComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
+BrushComponent=
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 Brush=SkeletalMeshActor.Physics.ConstraintsGroup,
 Landscape=SkeletalMeshActor.Physics.ConstraintsGroup,
 Camera_MainMenu_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 LevelSequenceActor=SkeletalMeshActor.Physics.ConstraintsGroup,
-LevelSequenceBurnInOptions=
-MovieSceneBindingOverrides=
-DefaultLevelSequenceInstanceData=
+LevelSequenceBurnInOptions=SkeletalMeshActor.Physics.ConstraintsGroup,
+MovieSceneBindingOverrides=SkeletalMeshActor.Physics.ConstraintsGroup,
+DefaultLevelSequenceInstanceData=SkeletalMeshActor.Physics.ConstraintsGroup,
 MeshComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 WorldSettings=WorldSettings.GameMode.SelectedGameModeDetails,
 LandscapeGizmoRenderComponent=
-LandscapeComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
+LandscapeComponent=
 LandscapeGizmoActiveActor=SkeletalMeshActor.Physics.ConstraintsGroup,
 BP_CheckToAdvance_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 Car1_C=
