Added music and some ambience sounds to all maps

--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -103,7 +103,6 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 MultipleInstancePositions=(X=0,Y=0)
-LastExecutedPlayModeType=PlayMode_InNewProcess
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -134,14 +133,14 @@ GridEnabled=False
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Maps/TrashPlace
-MRUItem1=/Game/Maps/Park
-MRUItem2=/Game/Maps/Street
+MRUItem0=/Game/Maps/Menu
+MRUItem1=/Game/Maps/TrashPlace
+MRUItem2=/Game/Maps/Hospital
 MRUItem3=/Game/Maps/School
-MRUItem4=/Game/Maps/Hospital
-MRUItem5=/Game/Maps/LevelSelection
-MRUItem6=/Game/Maps/Menu
-MRUItem7=/Game/Maps/Alley
+MRUItem4=/Game/Maps/Alley
+MRUItem5=/Game/Maps/Street
+MRUItem6=/Game/Maps/Park
+MRUItem7=/Game/Maps/LevelSelection
 MRUItem8=/Game/ThirdPersonBP/Menu
 MRUItem9=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
@@ -181,7 +180,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/WinScreen
+ContentBrowserTab1.SelectedPaths=/Game/Music_SFX
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -211,34 +210,32 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Maps/TrashPlace
+LastLevel=/Game/Maps/Menu
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/WinScreen/BP_WinScreen.BP_WinScreen
-OpenAssetsAtExit=/Game/Blueprints/Raccoon.Raccoon
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Raccoon
-MRUItem1=/Game/Blueprints/WinScreen/BP_WinScreen
+MRUItem0=/Game/Music_SFX/555801__ddmyzik__bluesy-hip-hop-loop
+MRUItem1=/Game/Maps/Menu
 MRUItem2=/Game/Maps/TrashPlace
-MRUItem3=/Game/Maps/Park
-MRUItem4=/Game/Maps/Street
-MRUItem5=/Game/Maps/School
-MRUItem6=/Game/Maps/Alley
-MRUItem7=/Game/Maps/Hospital
-MRUItem8=/Game/Maps/LevelSelection
-MRUItem9=/Game/Maps/Menu
-MRUItem10=/Game/Blueprints/Street/TargetPointMove
-MRUItem11=/Game/Blueprints/WinScreen/WB_WinScreen
-MRUItem12=/Game/Blueprints/Pause/WB_PauseScreen
-MRUItem13=/Game/Blueprints/Collectibles/ItemHolders/BP_HeartToyHolder
-MRUItem14=/Game/Blueprints/Collectibles/ItemHolders/BP_TeddyBearHolder
-MRUItem15=/Game/Blueprints/Collectibles/ItemHolders/BP_CupCakeHolder
-MRUItem16=/Game/Blueprints/Collectibles/ItemHolders/BP_AppleHolder
-MRUItem17=/Game/Blueprints/Collectibles/ItemHolders/BP_SodaHolder
-MRUItem18=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley
-MRUItem19=/Game/Blueprints/BP_GameInstanceRaccoon
+MRUItem3=/Game/Maps/Hospital
+MRUItem4=/Game/Maps/School
+MRUItem5=/Game/Maps/Alley
+MRUItem6=/Game/Maps/Street
+MRUItem7=/Game/Maps/Park
+MRUItem8=/Game/Blueprints/BP_GameInstanceRaccoon
+MRUItem9=/Game/Blueprints/Raccoon
+MRUItem10=/Game/Blueprints/WinScreen/BP_WinScreen
+MRUItem11=/Game/Maps/LevelSelection
+MRUItem12=/Game/Blueprints/Street/TargetPointMove
+MRUItem13=/Game/Blueprints/WinScreen/WB_WinScreen
+MRUItem14=/Game/Blueprints/Pause/WB_PauseScreen
+MRUItem15=/Game/Blueprints/Collectibles/ItemHolders/BP_HeartToyHolder
+MRUItem16=/Game/Blueprints/Collectibles/ItemHolders/BP_TeddyBearHolder
+MRUItem17=/Game/Blueprints/Collectibles/ItemHolders/BP_CupCakeHolder
+MRUItem18=/Game/Blueprints/Collectibles/ItemHolders/BP_AppleHolder
+MRUItem19=/Game/Blueprints/Collectibles/ItemHolders/BP_SodaHolder
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1692,6 +1689,31 @@ WB_WinScreen_C.Designer=True
 WB_WinScreen_C.Accessibility=True
 WB_WinScreen_C.Clipping=True
 WB_WinScreen_C.Localization=True
+AmbientSound.TransformCommon=True
+AmbientSound.Sound=True
+AmbientSound.Attenuation=True
+AmbientSound.Filter=True
+AmbientSound.Attachment=True
+AmbientSound.Randomization=True
+AmbientSound.Concurrency=True
+AmbientSound.Tags=True
+AmbientSound.Activation=True
+AmbientSound.Cooking=True
+AmbientSound.Rendering=True
+AmbientSound.Replication=True
+AmbientSound.Actor=True
+SoundWave.Format=True
+SoundWave.Playback=True
+SoundWave.Sound=True
+SoundWave.Loading=True
+SoundWave.Subtitles=True
+SoundWave.Analysis=True
+SoundWave.Info=True
+SoundWave.File Path=True
+SoundWave.Developer=True
+SoundWave.Voice Management=True
+SoundWave.Effects=True
+SoundWave.Attenuation=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1875,6 +1897,7 @@ WB_PauseScreen_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \
 WB_WinScreen_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.AmbientSound;/Engine/Transient.ActorFactoryAmbientSound_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Blueprints/Collectibles/ItemHolders/Soda.Soda;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
@@ -1894,7 +1917,6 @@ RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Street
 RecentlyPlaced=/Game/Blueprints/Collectibles/BP_Soda_2.BP_Soda_2;
 RecentlyPlaced=/Game/Assets/3D/Objects/Apple/Apple.Apple;
 RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley.BP_CheckToAdvance_Alley;
-RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Park.BP_CheckToAdvance_Park;
 
 [MessageLog]
 LastLogListing=LightingResults
@@ -2011,10 +2033,11 @@ LastLogListing=LightingResults
 /Game/Blueprints/Collectibles/ItemHolders/BP_HeartToyHolder.BP_HeartToyHolder=0
 /Game/Blueprints/Collectibles/ItemHolders/BP_SodaHolder.BP_SodaHolder=0
 /Game/Blueprints/Collectibles/ItemHolders/BP_TeddyBearHolder.BP_TeddyBearHolder=0
+/Game/Music_SFX/555801__ddmyzik__bluesy-hip-hop-loop.555801__ddmyzik__bluesy-hip-hop-loop=1
 
 [RootWindow]
 ScreenPosition=X=136.000 Y=36.800
-WindowSize=X=1360.800 Y=800.800
+WindowSize=X=1362.400 Y=802.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2035,7 +2058,7 @@ UNR=../../../../../Unreal/PuzzleRaccoon/Raccoozle/Content/Maps
 BRUSH=../../../../../Unreal/Raccoozle/Content/
 FBX=../../../../../Unreal/Raccoozle/Content/
 FBXAnim=../../../../../Unreal/Raccoozle/Content/
-GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Objects/HeartToy/uploads_files_2036667_LP_heart_FBX.fbx
+GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Music+SFX/555801__ddmyzik__bluesy-hip-hop-loop.wav
 GenericExport=../../../../../Unreal/Raccoozle/Content/
 GenericOpen=D:/Unreal/PuzzleRaccoon/Photoshop
 GenericSave=../../../../../Unreal/Raccoozle/Content/
@@ -3230,6 +3253,7 @@ BillboardComponent=SkeletalMeshActor.Physics.ConstraintsGroup,
 WB_WinScreen_C=
 PlayerController=
 BP_WinScreen_C=SkeletalMeshActor.Physics.ConstraintsGroup,
+K2Node_FunctionEntry=
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
