--- a/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Raccoozle/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -133,13 +133,13 @@ GridEnabled=False
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/Maps/Menu
-MRUItem1=/Game/Maps/TrashPlace
-MRUItem2=/Game/Maps/Hospital
-MRUItem3=/Game/Maps/School
-MRUItem4=/Game/Maps/Alley
-MRUItem5=/Game/Maps/Street
-MRUItem6=/Game/Maps/Park
+MRUItem0=/Game/Maps/Park
+MRUItem1=/Game/Maps/Street
+MRUItem2=/Game/Maps/Menu
+MRUItem3=/Game/Maps/TrashPlace
+MRUItem4=/Game/Maps/Hospital
+MRUItem5=/Game/Maps/School
+MRUItem6=/Game/Maps/Alley
 MRUItem7=/Game/Maps/LevelSelection
 MRUItem8=/Game/ThirdPersonBP/Menu
 MRUItem9=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
@@ -180,7 +180,7 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/Music_SFX
+ContentBrowserTab1.SelectedPaths=/Game/Maps
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -210,32 +210,32 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/Maps/Menu
+LastLevel=/Game/Maps/Park
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Music_SFX/555801__ddmyzik__bluesy-hip-hop-loop
-MRUItem1=/Game/Maps/Menu
-MRUItem2=/Game/Maps/TrashPlace
-MRUItem3=/Game/Maps/Hospital
-MRUItem4=/Game/Maps/School
-MRUItem5=/Game/Maps/Alley
-MRUItem6=/Game/Maps/Street
-MRUItem7=/Game/Maps/Park
-MRUItem8=/Game/Blueprints/BP_GameInstanceRaccoon
-MRUItem9=/Game/Blueprints/Raccoon
-MRUItem10=/Game/Blueprints/WinScreen/BP_WinScreen
-MRUItem11=/Game/Maps/LevelSelection
-MRUItem12=/Game/Blueprints/Street/TargetPointMove
-MRUItem13=/Game/Blueprints/WinScreen/WB_WinScreen
-MRUItem14=/Game/Blueprints/Pause/WB_PauseScreen
-MRUItem15=/Game/Blueprints/Collectibles/ItemHolders/BP_HeartToyHolder
-MRUItem16=/Game/Blueprints/Collectibles/ItemHolders/BP_TeddyBearHolder
-MRUItem17=/Game/Blueprints/Collectibles/ItemHolders/BP_CupCakeHolder
-MRUItem18=/Game/Blueprints/Collectibles/ItemHolders/BP_AppleHolder
-MRUItem19=/Game/Blueprints/Collectibles/ItemHolders/BP_SodaHolder
+MRUItem0=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Street
+MRUItem1=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley
+MRUItem2=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Hospital
+MRUItem3=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Park
+MRUItem4=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_School
+MRUItem5=/Game/Blueprints/printtest
+MRUItem6=/Game/Blueprints/BP_GameModeRaccoon
+MRUItem7=/Game/Blueprints/Raccoon
+MRUItem8=/Game/Blueprints/Collectibles/BP_Soda
+MRUItem9=/Game/Maps/Park
+MRUItem10=/Game/Maps/Street
+MRUItem11=/Game/Maps/TrashPlace
+MRUItem12=/Game/Maps/Hospital
+MRUItem13=/Game/Maps/School
+MRUItem14=/Game/Maps/Alley
+MRUItem15=/Game/Music_SFX/555801__ddmyzik__bluesy-hip-hop-loop
+MRUItem16=/Game/Maps/Menu
+MRUItem17=/Game/Blueprints/BP_GameInstanceRaccoon
+MRUItem18=/Game/Blueprints/WinScreen/BP_WinScreen
+MRUItem19=/Game/Maps/LevelSelection
 
 [DetailCategories]
 BP_Click_C.Tick=True
@@ -1714,6 +1714,13 @@ SoundWave.Developer=True
 SoundWave.Voice Management=True
 SoundWave.Effects=True
 SoundWave.Attenuation=True
+printtest_C.TransformCommon=True
+printtest_C.Rendering=True
+printtest_C.Replication=True
+printtest_C.Collision=True
+printtest_C.Input=True
+printtest_C.Actor=True
+printtest_C.Tick=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1897,6 +1904,7 @@ WB_PauseScreen_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \
 WB_WinScreen_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/printtest.printtest;
 RecentlyPlaced=/Script/Engine.AmbientSound;/Engine/Transient.ActorFactoryAmbientSound_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/Blueprints/Collectibles/ItemHolders/Soda.Soda;/Engine/Transient.ActorFactoryBlueprint_0
@@ -1916,10 +1924,9 @@ RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_School
 RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Street.BP_CheckToAdvance_Street;
 RecentlyPlaced=/Game/Blueprints/Collectibles/BP_Soda_2.BP_Soda_2;
 RecentlyPlaced=/Game/Assets/3D/Objects/Apple/Apple.Apple;
-RecentlyPlaced=/Game/Blueprints/Collectibles/NextLevels/BP_CheckToAdvance_Alley.BP_CheckToAdvance_Alley;
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPersonBP/BP_Menu.BP_Menu=0
@@ -2034,10 +2041,11 @@ LastLogListing=LightingResults
 /Game/Blueprints/Collectibles/ItemHolders/BP_SodaHolder.BP_SodaHolder=0
 /Game/Blueprints/Collectibles/ItemHolders/BP_TeddyBearHolder.BP_TeddyBearHolder=0
 /Game/Music_SFX/555801__ddmyzik__bluesy-hip-hop-loop.555801__ddmyzik__bluesy-hip-hop-loop=1
+/Game/Blueprints/printtest.printtest=0
 
 [RootWindow]
 ScreenPosition=X=136.000 Y=36.800
-WindowSize=X=1362.400 Y=802.400
+WindowSize=X=1365.600 Y=805.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2058,7 +2066,7 @@ UNR=../../../../../Unreal/PuzzleRaccoon/Raccoozle/Content/Maps
 BRUSH=../../../../../Unreal/Raccoozle/Content/
 FBX=../../../../../Unreal/Raccoozle/Content/
 FBXAnim=../../../../../Unreal/Raccoozle/Content/
-GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Music+SFX/555801__ddmyzik__bluesy-hip-hop-loop.wav
+GenericImport=../../../../../Unreal/PuzzleRaccoon/Assets/Music+SFX/SFX/machine-sound-effect.wav
 GenericExport=../../../../../Unreal/Raccoozle/Content/
 GenericOpen=D:/Unreal/PuzzleRaccoon/Photoshop
 GenericSave=../../../../../Unreal/Raccoozle/Content/
@@ -3254,6 +3262,7 @@ WB_WinScreen_C=
 PlayerController=
 BP_WinScreen_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 K2Node_FunctionEntry=
+printtest_C=SkeletalMeshActor.Physics.ConstraintsGroup,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
